--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,22 +22,17 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Install pnpm
-        uses: pnpm/action-setup@v4
-        with:
-          version: 9
-
       - name: Setup Node
         uses: actions/setup-node@v4
         with:
           node-version: 22
-          cache: pnpm
+          cache: npm
 
       - name: Install dependencies
-        run: pnpm install
+        run: npm ci
 
       - name: Static HTML export with Nuxt
-        run: pnpm nuxt generate
+        run: npx nuxt generate
 
       - name: Add CNAME file
         run: echo 'aganov.dev' > .output/public/CNAME
