global update docs

--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -25,9 +25,12 @@
     "^@/validation",
     "^@/router",
     "^@/App",
+    "^@/components",
+    "^@api",
+    "^@app",
+    "^@docs",
     "^@base",
     "^@ui",
-    "^@/components",
     "^@/enums",
     "^@/types",
     "^@/",
