--- a/package.json
+++ b/package.json
@@ -27,9 +27,11 @@
     "@vueuse/core": "^14.2.1",
     "@vueuse/motion": "^3.0.3",
     "better-sqlite3": "^12.6.2",
+    "jszip": "^3.10.1",
     "motion-v": "^1.10.3",
     "nuxt": "^4.3.1",
     "ogl": "^1.0.11",
+    "shiki": "^1.29.0",
     "tailwindcss": "^4.1.18"
   },
   "devDependencies": {
